--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,67 @@
         <link href="/dist/output.css" rel="stylesheet" />
     </head>
     <body>
-        <h1 class="text-3xl font-bold underline">Hello world!</h1>
+        <div id="root">
+            <div
+                class="content-section max-w-[1320px] text-base m-auto bg-slate-300"
+            >
+                <header class="flex py-6 justify-between items-center">
+                    <div
+                        class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer"
+                    >
+                        CoffeeStyle.
+                    </div>
+                    <ul
+                        class="flex basis-3/6 justify-start gap-x-8 uppercase text-sm text-gray-500 font-medium items-center"
+                    >
+                        <li class="ct-nav-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="ct-nav-item">
+                            <a href="#">Products</a>
+                        </li>
+                        <li class="ct-nav-item">
+                            <a href="#">Blog</a>
+                        </li>
+                        <li class="ct-nav-item">
+                            <a href="#">About</a>
+                        </li>
+                        <li class="ct-nav-item">
+                            <a href="#">Contact</a>
+                        </li>
+                        <li class="ct-nav-item">
+                            <a href="#">Styleguide</a>
+                        </li>
+                    </ul>
+                    <div class="basis-1/6 flex items-center">
+                        <li
+                            class="inline-flex items-center ct-nav-item uppercase text-sm text-gray-500 font-medium cursor-pointer"
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke-width="1.5"
+                                stroke="currentColor"
+                                class="w-5 h-5"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
+                                />
+                            </svg>
+
+                            <span class="mx-1"> Card </span>
+                            <div
+                                class="block bg-orange-500 px-1 text-white text-xs font-semibold rounded-full"
+                            >
+                                10
+                            </div>
+                        </li>
+                    </div>
+                </header>
+            </div>
+        </div>
     </body>
 </html>
