--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="root">
             <div
-                class="content-section max-w-[1320px] text-base m-auto bg-slate-300 font-Karia"
+                class="content-section max-w-[1320px] text-base m-auto font-Karia"
             >
                 <header class="flex py-6 justify-between items-center relative">
                     <div
@@ -87,7 +87,36 @@
                         </svg>
                     </div>
                 </header>
-                <div class="h-[1000px]"></div>
+                <div class="px-4">
+                    <div
+                        class="h-[600px] bg-[url('../public/img/slider-bg.jpeg')] bg-no-repeat bg-cover bg-bottom"
+                    >
+                        <div
+                            class="relative w-full h-full flex bg-gray-900 bg-opacity-40"
+                        >
+                            <div
+                                class="absolute top-[50%] translate-y-[-50%] mx-auto w-full px-20 text-white text-center flex flex-col items-center"
+                            >
+                                <h1 class="text-lg mb-4">
+                                    BEST PLACE TO BUY COFFEE
+                                </h1>
+                                <h4 class="text-5xl font-medium mb-4">
+                                    Coffee Mugs
+                                </h4>
+                                <h1 class="text-lg font-medium mb-4">
+                                    The most versatile furniture system ever
+                                    created. Designed to fit your life, made to
+                                    move and grow.
+                                </h1>
+                                <button
+                                    class="text-black text-[14px] font-medium py-4 bg-white px-6 hover:opacity-95"
+                                >
+                                    EXPLORE OUR PRODUCTS
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
