--- a/public/index.html
+++ b/public/index.html
@@ -119,12 +119,12 @@
                 </div>
                 <!-- Content section -->
                 <div class="px-6">
+                    <!-- Coffee story -->
                     <div class="relative flex items-center justify-center">
                         <div class="ct-before-sub-heading"></div>
                         <div class="ct-sub-heading mx-5">OUR COFFEE STORY</div>
                         <div class="ct-before-sub-heading"></div>
                     </div>
-                    <!-- Coffee story -->
                     <div
                         class="lg:flex lg:items-center lg:w-[65%] lg:mx-auto lg:gap-4 justify-center"
                     >
@@ -160,9 +160,55 @@
                             </div>
                         </div>
                     </div>
+                    <!-- FEATURED MUGS -->
                     <div class="relative flex items-center justify-center">
                         <div class="ct-before-sub-heading"></div>
                         <div class="ct-sub-heading mx-5">FEATURED MUGS</div>
+                        <div class="ct-before-sub-heading"></div>
+                    </div>
+                    <div class="lg:items-center lg:w-[65%] lg:mx-auto">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                            <div class="ct-product-item">
+                                <div class="relative group ct-product-image">
+                                    <img
+                                        src="./img/featured-mug-01.jpg"
+                                        alt=""
+                                    />
+                                    <div
+                                        class="ct-product-btn group-hover:block"
+                                    >
+                                        EXPLORE MUG
+                                    </div>
+                                </div>
+                                <h1 class="ct-product-heading">
+                                    Pink Premium Ceramic
+                                </h1>
+                                <p class="ct-product-price">$99.00 USD</p>
+                            </div>
+                            <div class="ct-product-item">
+                                <div class="relative group ct-product-image">
+                                    <img
+                                        src="./img/featured-mug-02.jpg"
+                                        alt=""
+                                    />
+                                    <div
+                                        class="ct-product-btn group-hover:block"
+                                    >
+                                        EXPLORE MUG
+                                    </div>
+                                    <div class="ct-onsale">On Sale.</div>
+                                </div>
+                                <h1 class="ct-product-heading">
+                                    Golden Designers Mug
+                                </h1>
+                                <p class="ct-product-price">$50.00</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- MORE PRODUCTS -->
+                    <div class="relative flex items-center justify-center">
+                        <div class="ct-before-sub-heading"></div>
+                        <div class="ct-sub-heading mx-5">MORE PRODUCTS</div>
                         <div class="ct-before-sub-heading"></div>
                     </div>
                 </div>
