--- a/public/index.html
+++ b/public/index.html
@@ -211,6 +211,164 @@
                         <div class="ct-sub-heading mx-5">MORE PRODUCTS</div>
                         <div class="ct-before-sub-heading"></div>
                     </div>
+                    <div
+                        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-10"
+                    >
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                        <div class="ct-product-item">
+                            <div class="relative group ct-product-image">
+                                <img src="./img/featured-mug-01.jpg" alt="" />
+                                <div class="ct-product-btn group-hover:block">
+                                    EXPLORE MUG
+                                </div>
+                            </div>
+                            <h1 class="ct-product-heading">
+                                Pink Premium Ceramic
+                            </h1>
+                            <p class="ct-product-price">$99.00 USD</p>
+                        </div>
+                    </div>
+                    <!-- COFFEE MAGAZINE -->
+                    <div class="relative flex items-center justify-center mt-6">
+                        <div class="ct-before-sub-heading"></div>
+                        <div class="ct-sub-heading mx-5">
+                            BUY 2 MUGS AND GET A COFFEE MAGAZINE FREE
+                        </div>
+                        <div class="ct-before-sub-heading"></div>
+                    </div>
+                    <div
+                        class="mx-auto w-[95%] xl:w-[65%] flex gap-5 flex-col md:flex-row pb-20"
+                    >
+                        <div class="basis-1/2 flex flex-col md:flex-row gap-5">
+                            <div class="md:basis-2/3 h-[280px]">
+                                <img
+                                    src="./img/magazine-image-01.jpeg"
+                                    alt=""
+                                    class="h-full w-full"
+                                />
+                            </div>
+                            <div
+                                class="md:basis-1/3 flex flex-row md:flex-col gap-5"
+                            >
+                                <div class="basis-1/2">
+                                    <img
+                                        src="./img/magazine-image-02.jpeg"
+                                        alt=""
+                                        class="h-full"
+                                    />
+                                </div>
+                                <div class="basis-1/2">
+                                    <img
+                                        src="./img/magazine-image-03.jpeg"
+                                        alt=""
+                                        class="h-full"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="basis-1/2 text-center md:text-left md:pl-4">
+                            <h1
+                                class="text-sm text-gray-500 font-normal my-3 md:mt-5"
+                            >
+                                PREMIUM OFFER
+                            </h1>
+                            <h4 class="text-4xl mb-4">
+                                Get our Coffee Magazine
+                            </h4>
+                            <p class="text-base text-gray-500 font-normal my-3">
+                                The most versatile furniture system ever
+                                created. Designed to fit your life.
+                            </p>
+                            <p
+                                class="py-3 px-7 tracking-wide cursor-pointer hover:opacity-90 bg-black text-white inline-block text-[13px] font-semibold"
+                            >
+                                START SHOPPING
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
